examples/failing/TypeWildcards2.purs
module TypeWildcards where

data Test = Test _

